--- a/evento.html
+++ b/evento.html
@@ -119,7 +119,7 @@
 			<div class="container grid-sm"><a name="marta"></a>
 				<h2 class="contenido-h2 underline">Workshop Marta Cerdà</h2>
 				<p class="bold">Diseño de una capitular (4 horas)</p>
-				<p>En este taller, se explorarán las conexiones entre tipografía y diferentes espacios de expresión. Cada alumnos escogerá a ciegas une estilo gráfico que tendrá que desarrollar a través de una letra capitular. A partir de ahí, se buscarán referencias y se formalizará el ejercicio cabalgando entre ilustración y tipografía.</p>
+				<p>En este taller, se explorarán las conexiones entre tipografía y diferentes espacios de expresión. Cada alumno escogerá a ciegas un estilo gráfico que tendrá que desarrollar a través de una letra capitular. A partir de ahí, se buscarán referencias y se formalizará el ejercicio cabalgando entre ilustración y tipografía.</p>
 				<p><b>Material:</b> ordenador con Illustrator.</p>
 			</div>
 			<div class="container grid-lg">
@@ -132,7 +132,7 @@
 			<div class="container grid-sm"><a name="borja"></a>
 				<h2 class="contenido-h2 underline">Workshop Borja Martínez (Lo Siento)</h2>
 				<p class="bold">Diseño de etiqueta de vino sin ordenador (4 horas)</p>
-				<p>En este taller, se explotarán las posibilidades expresivas del alumno a mano y sin máquina. Partiendo de un brief en apariencia simple: «diseñar una etiqueta de vino natural», y sin el uso del ordenador, se buscará explorar los límites de la creatividad a través de elementos tangibles.</p>
+				<p>En este taller, se explotarán las posibilidades expresivas del alumno a mano y sin máquina. Partiendo de un <i>brief</i> en apariencia simple: «diseñar una etiqueta de vino natural», y sin el uso del ordenador, se buscará explorar los límites de la creatividad a través de elementos tangibles.</p>
 				<p><b>Material:</b> pinturas, sprays, rotuladores, sellos (estampación), washi & cello tapes, periódicos, papel de envolver...</p>
 			</div>
 			<div class="container grid-lg">
