--- a/evento.html
+++ b/evento.html
@@ -133,7 +133,7 @@
 				<h2 class="contenido-h2 underline">Workshop Borja Martínez (Lo Siento)</h2>
 				<p class="bold">Diseño de etiqueta de vino sin ordenador (4 horas)</p>
 				<p>En este taller, se explotarán las posibilidades expresivas del alumno a mano y sin máquina. Partiendo de un <i>brief</i> en apariencia simple: «diseñar una etiqueta de vino natural», y sin el uso del ordenador, se buscará explorar los límites de la creatividad a través de elementos tangibles.</p>
-				<p><b>Material:</b> pinturas, sprays, rotuladores, sellos (estampación), washi & cello tapes, periódicos, papel de envolver...</p>
+				<p><b>Material:</b> pinturas, esprays, rotuladores, sellos (estampación), washi & cello tapes, periódicos, papel de envolver...</p>
 			</div>
 			<div class="container grid-lg">
 				<div class="columns">
