--- a/evento.html
+++ b/evento.html
@@ -262,14 +262,14 @@
                 </div>
               </div>
 							<div class="panel-footer">
-								<a class="btn btn-primary btn-lg" style="width:100%;" href="https://docs.google.com/forms/d/e/1FAIpQLSeCYd006YGP2vk20Wczv6lxEjua7Teqy0w_4nhdXGrQBkwvgw/viewform?usp=sf_link">PRE-INSCRIBIRSE</a>
+								<a class="btn btn-primary btn-lg disabled" style="width:100%;">PRE-INSCRIBIRSE</a>
 							</div>
             </div>
           </div>
 				</div>
 				<div class="toast plus20">
-					<b>Inscripción:</b> abierta para la edición de 2019.<br>
-					<b>Plazas:</b> quedan 28 (de 38).
+					<b>Inscripción:</b> cerrada para la edición de 2019.<br>
+					<b>Plazas:</b> quedan 0 (de 38).
 				</div>
 				<div class="toast toast-warning plus20" style="color:black; background-color:white; border-color:#dadee4;">
 					<u>Nota 1:</u> <b>La pre-inscripción no es vinculante ni significa la inscripción directa.</b> Cuando recibamos tu solicitud te indicaremos cómo formalizar el pago y completar la inscripción.<br>
