--- a/curso.html
+++ b/curso.html
@@ -262,7 +262,7 @@
                 </div>
               </div>
 							<div class="panel-footer">
-								<a class="btn btn-primary btn-lg disabled" style="width:100%;" href="#">PRE-INSCRIBIRSE</a>
+								<a class="btn btn-primary btn-lg" style="width:100%;" href="https://docs.google.com/forms/d/e/1FAIpQLSehMT6d9jB7ajiltFW00hWFq_UZ5FMLnV4x6SN7ZCX6y_dg7w/viewform?usp=sf_link">PRE-INSCRIBIRSE</a>
 							</div>
             </div>
           </div>
@@ -324,13 +324,13 @@
                 </div>
               </div>
 							<div class="panel-footer">
-								<a class="btn btn-primary btn-lg disabled" style="width:100%;" href="#">PRE-INSCRIBIRSE</a>
+								<a class="btn btn-primary btn-lg" style="width:100%;" href="https://docs.google.com/forms/d/e/1FAIpQLSehMT6d9jB7ajiltFW00hWFq_UZ5FMLnV4x6SN7ZCX6y_dg7w/viewform?usp=sf_link">PRE-INSCRIBIRSE</a>
 							</div>
             </div>
           </div>
 				</div>
 				<div class="toast plus20">
-					<b>Inscripción:</b> se abrirá el 6 de mayo de 2019.<br>
+					<b>Inscripción:</b> abierta para la edición 2019.<br>
 					<b>Plazas:</b> quedan 25 (de 25).
 				</div>
 				<div class="toast toast-warning plus20" style="color:black; background-color:white; border-color:#dadee4;">
