https links update

--- a/curso.html
+++ b/curso.html
@@ -10,8 +10,8 @@
 		<meta property="og:title" content="Glíglifo: curso de tipografía"/>
 		<meta property="og:description" content="Aprende todo el proceso de diseñar una tipografía en un palacio del siglo XVI durante una semana intensiva con Damià Rotger y Pedro Arilla."/>
 		<meta property="og:type" content="website"/>
-		<meta property="og:url" content="http://gliglifo.com/"/>
-		<meta property="og:image" content="http://gliglifo.com/img/facebook.gif"/>
+		<meta property="og:url" content="https://gliglifo.com/"/>
+		<meta property="og:image" content="https://gliglifo.com/img/facebook.gif"/>
 	  <link type="text/css" rel="stylesheet" href="./src/spectre.css">
 		<link type="text/css" rel="stylesheet" href="./src/spectre-icons.min.css">
 		<link type="text/css" rel="stylesheet" href="./src/gliglifo.css">
@@ -24,7 +24,7 @@
 				<section class="navbar-section">
 					<a href="./index.html"><span class="navbar-brand mr-2" title="Glíglifo">
 						<svg version="1.1"
-							 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+							 xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" xmlns:a="https://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
 							 x="0px" y="0px" width="116px" height="35px" viewBox="0 0 332.9 101.3" style="enable-background:new 0 0 332.9 101.3;"
 							 xml:space="preserve">
 							<defs>
@@ -154,7 +154,7 @@
 				  </div>
 				  <div class="column col-9 col-xs-12 plus20" class="pros-bio">
 				    <h3 class="contenido-h3 bold">Damià Rotger</h3>
-						<p>Damià diseña <a href="http://ductilct.com/?tagportfolio=tipografia" title="Dúctil tipografías" target="_blank">tipografías</a> y escribe poesía. Es profesor de tipografía y diseño editorial, e imparte talleres y conferencias por todo el país. Es fundador de <a href="http://ductilct.com/" title="Dúctil" target="_blank">Dúctil</a> y la mitad de Glíglifo. Es autor de una docena de familias tipográficas —algunas publicadas en <a href="https://www.fontown.com/es/fundiciones-tipograficas/ductil" target="_blank" title="Dúctil Fontown">Fontown</a>— y ha publicado varios libros de poesía. Ha recibido prestigiosos premios y nominaciones en ambos campos.</p>
+						<p>Damià diseña <a href="https://ductilct.com/?tagportfolio=tipografia" title="Dúctil tipografías" target="_blank">tipografías</a> y escribe poesía. Es profesor de tipografía y diseño editorial, e imparte talleres y conferencias por todo el país. Es fundador de <a href="https://ductilct.com/" title="Dúctil" target="_blank">Dúctil</a> y la mitad de Glíglifo. Es autor de una docena de familias tipográficas —algunas publicadas en <a href="https://www.fontown.com/es/fundiciones-tipograficas/ductil" target="_blank" title="Dúctil Fontown">Fontown</a>— y ha publicado varios libros de poesía. Ha recibido prestigiosos premios y nominaciones en ambos campos.</p>
 						<p><a href="https://www.facebook.com/EstudiDuctil/" title="Dúctil Facebook" target="_blank">Facebook</a>&ensp;/&ensp;<a href="https://twitter.com/Ductil_Grafic" title="Dúctil Twitter" target="_blank">Twitter</a>&ensp;/&ensp;<a href="https://www.instagram.com/ductil/" title="Dúctil Instagram" target="_blank">Instagram</a></p>
 				  </div>
 				</div>
@@ -362,17 +362,17 @@
 			<div class="container grid-sm">
 				<h2 class="contenido-h2 underline">Patrocinadores</h2>
 				<div class="columns" style="text-align:center;">
-					<div class="column col-4 col-sm-6"><a href="http://campgrafic.com" title="Campgràfic" target="_blank"><img src="img/campgrafic.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="http://glyphsapp.com" title="Glyphs" target="_blank"><img src="img/glyphs.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="http://fontown.com" title="Fontown" target="_blank"><img src="img/fontown.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="http://graffica.info" title="Gràffica" target="_blank"><img src="img/graffica.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="http://tipo-e.com" title="Tipo e" target="_blank"><img src="img/tipoe.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="http://www.edicionesjardindemonos.es/" title="Jardín de monos" target="_blank"><img src="img/jardindemonos.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="http://ductilct.com/" title="Dúctil" target="_blank"><img src="img/ductil.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="http://donserifa.com" title="Don Serifa" target="_blank"><img src="img/donserifa.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="http://fontsmith.com" title="Fontsmith" target="_blank"><img src="img/fontsmith.png" alt="" width="175px"></a></div>
-					<div class="column col-6 col-sm-6"><a href="http://www.sosdelreycatolico.com/" title="Ayuntamiento de Sos" target="_blank"><img src="img/sos.png" alt="Ayuntamiento de Sos del Rey Católico" width="175px"></a></div>
-					<div class="column col-6 col-sm-12"><a href="http://www.alberguedesos.com/" title="Albergue de Sos" target="_blank"><img src="img/albergue.png" alt="Albergue de Jueventud de Sos del Rey Católico" width="175px"></a></div>
+					<div class="column col-4 col-sm-6"><a href="https://campgrafic.com" title="Campgràfic" target="_blank"><img src="img/campgrafic.png" alt="" width="175px"></a></div>
+					<div class="column col-4 col-sm-6"><a href="https://glyphsapp.com" title="Glyphs" target="_blank"><img src="img/glyphs.png" alt="" width="175px"></a></div>
+					<div class="column col-4 col-sm-6"><a href="https://fontown.com" title="Fontown" target="_blank"><img src="img/fontown.png" alt="" width="175px"></a></div>
+					<div class="column col-4 col-sm-6"><a href="https://graffica.info" title="Gràffica" target="_blank"><img src="img/graffica.png" alt="" width="175px"></a></div>
+					<div class="column col-4 col-sm-6"><a href="https://tipo-e.com" title="Tipo e" target="_blank"><img src="img/tipoe.png" alt="" width="175px"></a></div>
+					<div class="column col-4 col-sm-6"><a href="https://www.edicionesjardindemonos.es/" title="Jardín de monos" target="_blank"><img src="img/jardindemonos.png" alt="" width="175px"></a></div>
+					<div class="column col-4 col-sm-6"><a href="https://ductilct.com/" title="Dúctil" target="_blank"><img src="img/ductil.png" alt="" width="175px"></a></div>
+					<div class="column col-4 col-sm-6"><a href="https://donserifa.com" title="Don Serifa" target="_blank"><img src="img/donserifa.png" alt="" width="175px"></a></div>
+					<div class="column col-4 col-sm-6"><a href="https://fontsmith.com" title="Fontsmith" target="_blank"><img src="img/fontsmith.png" alt="" width="175px"></a></div>
+					<div class="column col-6 col-sm-6"><a href="https://www.sosdelreycatolico.com/" title="Ayuntamiento de Sos" target="_blank"><img src="img/sos.png" alt="Ayuntamiento de Sos del Rey Católico" width="175px"></a></div>
+					<div class="column col-6 col-sm-12"><a href="https://www.alberguedesos.com/" title="Albergue de Sos" target="_blank"><img src="img/albergue.png" alt="Albergue de Jueventud de Sos del Rey Católico" width="175px"></a></div>
 				</div>
 			</div>
 		</section>
