--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<meta property="og:title" content="Glíglifo: experiencia tipográfica"/>
 		<meta property="og:description" content="Cursos y eventos de tipografía en Sos del Rey Católico (Zaragoza, España)."/>
 		<meta property="og:type" content="website"/>
-		<meta property="og:url" content="http://gliglifo.com/"/>
-		<meta property="og:image" content="http://gliglifo.com/img/facebook.gif"/>
+		<meta property="og:url" content="https://gliglifo.com/"/>
+		<meta property="og:image" content="https://gliglifo.com/img/facebook.gif"/>
 	  <link type="text/css" rel="stylesheet" href="./src/spectre.css">
 		<link type="text/css" rel="stylesheet" href="./src/gliglifo.css">
 	  <link type="text/plain" rel="author" href="./src/humans.txt"/>
@@ -25,7 +25,7 @@
 		<section class="text-center" id="cover-masthead">
 			<h1 title="Glíglifo">
 				<svg version="1.1"
-					 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+					 xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" xmlns:a="https://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
 					 x="0px" y="0px" width="300px" viewBox="0 0 332.9 101.3" xml:space="preserve">
 					<defs>
 						<linearGradient id="f-gradient" x1="50%" y1="0%" x2="50%" y2="100%" >
@@ -85,7 +85,7 @@
 			</div>
 		</section>
 		<section class="navbar-section navbar-section-links" id="cover-menu">
-			<a href="https://facebook.com/gliglifo" title="Facebook de Glíglifo" target="_blank">Facebook</a>&ensp;/&ensp;<a href="https://instagram.com/gliglifo" title="Instagram de Glíglifo" target="_blank">Instagram</a>&ensp;/&ensp;<a href="./gliglifo.html" title="Ir a Más información">Info</a>
+			<a href="httpss://facebook.com/gliglifo" title="Facebook de Glíglifo" target="_blank">Facebook</a>&ensp;/&ensp;<a href="httpss://instagram.com/gliglifo" title="Instagram de Glíglifo" target="_blank">Instagram</a>&ensp;/&ensp;<a href="./gliglifo.html" title="Ir a Más información">Info</a>
 		</section>
 	</body>
 </html>
