--- a/evento.html
+++ b/evento.html
@@ -10,8 +10,8 @@
 		<meta property="og:title" content="Glíglifo: evento de tipografía"/>
 		<meta property="og:description" content="Explora las posibilidades de la letra durante un fin de semana recóndito con Marta Cerdà, Borja Martínez (Lo Siento) y José Luis Martín (Campgràfic)."/>
 		<meta property="og:type" content="website"/>
-		<meta property="og:url" content="http://gliglifo.com/"/>
-		<meta property="og:image" content="http://gliglifo.com/img/facebook.gif"/>
+		<meta property="og:url" content="https://gliglifo.com/"/>
+		<meta property="og:image" content="https://gliglifo.com/img/facebook.gif"/>
 	  <link type="text/css" rel="stylesheet" href="./src/spectre.css">
 		<link type="text/css" rel="stylesheet" href="./src/spectre-icons.min.css">
 		<link type="text/css" rel="stylesheet" href="./src/gliglifo.css">
@@ -24,7 +24,7 @@
 			  <section class="navbar-section">
 						<a href="./index.html"><span class="navbar-brand mr-2" title="Glíglifo">
 							<svg version="1.1"
-								 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+								 xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" xmlns:a="https://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
 								 x="0px" y="0px" width="116px" height="35px" viewBox="0 0 332.9 101.3" style="enable-background:new 0 0 332.9 101.3;"
 								 xml:space="preserve">
 								<defs>
@@ -153,7 +153,7 @@
 					<div class="column col-9 col-xs-12 plus20" class="pros-bio">
 						<h3 class="contenido-h3 bold">Marta Cerdà</h3>
 						<p>Marta es diseñadora y actualmente está a caballo entre Amsterdam y Barcelona. Desde su propio estudio trabaja en proyectos globales, que incluyen dirección artística, diseño, ilustración y tipografía personalizada. Entre sus clientes destacan Ray Ban, Coca Cola, Nike, Penguin Books o The Guardian. Un gran volumen de su trabajo se enfoca en las fronteras entre ilustración y tipografía, y el espacio de expresión de esta. Ha sido galardonada con el Young Guns 2008, el Premio Gràffica 2012 y el TDC Certificate of Typographic Excellence en 2015 y 2016, entre otros. Ha impartido conferencias, talleres y ponencias en todo el mundo. </p>
-						<p><a href="http://www.martacerda.com/" title="Web Marta Cerdà" target="_blank">Web</a>&ensp;/&ensp;<a href="https://www.behance.net/MartaCerda" title="Marta Cerdà Behance" target="_blank">Behance</a>&ensp;/&ensp;<a href="https://www.instagram.com/martacerda/" title="Marta Cerdà Instagram" target="_blank">Instagram</a></p>
+						<p><a href="https://www.martacerda.com/" title="Web Marta Cerdà" target="_blank">Web</a>&ensp;/&ensp;<a href="https://www.behance.net/MartaCerda" title="Marta Cerdà Behance" target="_blank">Behance</a>&ensp;/&ensp;<a href="https://www.instagram.com/martacerda/" title="Marta Cerdà Instagram" target="_blank">Instagram</a></p>
 					</div>
 				</div>
 				<div class="columns">
@@ -163,7 +163,7 @@
 					<div class="column col-9 col-xs-12 plus20" class="pros-bio">
 						<h3 class="contenido-h3 bold">Borja Martínez (Lo Siento)</h3>
 						<p>Borja es fundador de Lo Siento, un estudio que basa su filosofía en ofrecer resultados artesanales de calidad para proyectos de identidad visual. El rasgo más característico del trabajo de Lo Siento es su aproximación física y material a las soluciones gráficas, dando como resultado un diseño en el que lo gráfico y lo industrial conviven, en una constante búsqueda de alianzas con los procesos artesanales. En octubre del 2016 Borja entra a formar parte de la prestigiosa asociación de diseñadores gráficos: AGI (Alliance Graphique Internationale).</p>
-						<p><a href="http://www.losiento.net/" target="_blank" title="Lo Siento Web">Web</a>&ensp;/&ensp;<a href="https://www.behance.net/losiento" target="_blank" title="Lo Siento Behance">Behance</a>&ensp;/&ensp;<a href="https://www.instagram.com/losientostudio/" target="_blank" title="Lo Siento Instagram">Instagram</a></p>
+						<p><a href="https://www.losiento.net/" target="_blank" title="Lo Siento Web">Web</a>&ensp;/&ensp;<a href="https://www.behance.net/losiento" target="_blank" title="Lo Siento Behance">Behance</a>&ensp;/&ensp;<a href="https://www.instagram.com/losientostudio/" target="_blank" title="Lo Siento Instagram">Instagram</a></p>
 					</div>
 				</div>
 				<div class="columns">
@@ -173,7 +173,7 @@
 					<div class="column col-9 col-xs-12" class="pros-bio">
 						<h3 class="contenido-h3 bold">José Luis Martín (Campgràfic)</h3>
 						<p>José Luis es Licenciado en Filosofía por la Universitat de València, Máster en Artes Gráficas y Doctor por la Universitat Politècnica de València, tipógrafo, impresor y miembro fundador de Campgràfic, editorial especializada con la que ha publicado a investigadores y autores españoles al mismo tiempo que traducía por fin al castellano algunas de las publicaciones más relevantes de la historia del pensamiento tipográfico. También ha desarrollado una intensa tarea docente en el ámbito de la tipografía y las artes gráficas como profesor asociado y profesor del MAG de la Universitat Politècnica de València. De entre sus publicaciones, destaca el <i>Manual de tipografía. Del plomo a la era digital</i>, coescrito con Montse Mas, referencia ineludible que cuenta ya con diez reediciones.</p>
-						<p><a href="http://www.campgrafic.com/" target="_blank" title="Campgràfic">Web de Campgràfic</a>
+						<p><a href="https://www.campgrafic.com/" target="_blank" title="Campgràfic">Web de Campgràfic</a>
 					</div>
 				</div>
 			</div>
@@ -300,17 +300,17 @@
 			<div class="container grid-sm">
 				<h2 class="contenido-h2 underline">Patrocinadores</h2>
 				<div class="columns" style="text-align:center;">
-					<div class="column col-4 col-sm-6"><a href="http://campgrafic.com" title="Campgràfic" target="_blank"><img src="img/campgrafic.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="http://glyphsapp.com" title="Glyphs" target="_blank"><img src="img/glyphs.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="http://fontown.com" title="Fontown" target="_blank"><img src="img/fontown.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="http://graffica.info" title="Gràffica" target="_blank"><img src="img/graffica.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="http://tipo-e.com" title="Tipo e" target="_blank"><img src="img/tipoe.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="http://www.edicionesjardindemonos.es/" title="Jardín de monos" target="_blank"><img src="img/jardindemonos.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="http://ductilct.com/" title="Dúctil" target="_blank"><img src="img/ductil.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="http://donserifa.com" title="Don Serifa" target="_blank"><img src="img/donserifa.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="http://fontsmith.com" title="Fontsmith" target="_blank"><img src="img/fontsmith.png" alt="" width="175px"></a></div>
-					<div class="column col-6 col-sm-6"><a href="http://www.sosdelreycatolico.com/" title="Ayuntamiento de Sos" target="_blank"><img src="img/sos.png" alt="Ayuntamiento de Sos del Rey Católico" width="175px"></a></div>
-					<div class="column col-6 col-sm-12"><a href="http://www.alberguedesos.com/" title="Albergue de Sos" target="_blank"><img src="img/albergue.png" alt="Albergue de Jueventud de Sos del Rey Católico" width="175px"></a></div>
+					<div class="column col-4 col-sm-6"><a href="https://campgrafic.com" title="Campgràfic" target="_blank"><img src="img/campgrafic.png" alt="" width="175px"></a></div>
+					<div class="column col-4 col-sm-6"><a href="https://glyphsapp.com" title="Glyphs" target="_blank"><img src="img/glyphs.png" alt="" width="175px"></a></div>
+					<div class="column col-4 col-sm-6"><a href="https://fontown.com" title="Fontown" target="_blank"><img src="img/fontown.png" alt="" width="175px"></a></div>
+					<div class="column col-4 col-sm-6"><a href="https://graffica.info" title="Gràffica" target="_blank"><img src="img/graffica.png" alt="" width="175px"></a></div>
+					<div class="column col-4 col-sm-6"><a href="https://tipo-e.com" title="Tipo e" target="_blank"><img src="img/tipoe.png" alt="" width="175px"></a></div>
+					<div class="column col-4 col-sm-6"><a href="https://www.edicionesjardindemonos.es/" title="Jardín de monos" target="_blank"><img src="img/jardindemonos.png" alt="" width="175px"></a></div>
+					<div class="column col-4 col-sm-6"><a href="https://ductilct.com/" title="Dúctil" target="_blank"><img src="img/ductil.png" alt="" width="175px"></a></div>
+					<div class="column col-4 col-sm-6"><a href="https://donserifa.com" title="Don Serifa" target="_blank"><img src="img/donserifa.png" alt="" width="175px"></a></div>
+					<div class="column col-4 col-sm-6"><a href="https://fontsmith.com" title="Fontsmith" target="_blank"><img src="img/fontsmith.png" alt="" width="175px"></a></div>
+					<div class="column col-6 col-sm-6"><a href="https://www.sosdelreycatolico.com/" title="Ayuntamiento de Sos" target="_blank"><img src="img/sos.png" alt="Ayuntamiento de Sos del Rey Católico" width="175px"></a></div>
+					<div class="column col-6 col-sm-12"><a href="https://www.alberguedesos.com/" title="Albergue de Sos" target="_blank"><img src="img/albergue.png" alt="Albergue de Jueventud de Sos del Rey Católico" width="175px"></a></div>
 				</div>
 			</div>
 		</section>
