--- a/gliglifo.html
+++ b/gliglifo.html
@@ -10,8 +10,8 @@
 		<meta property="og:title" content="Glíglifo: experiencia tipográfica"/>
 		<meta property="og:description" content="Cursos y eventos de tipografía en Sos del Rey Católico (Zaragoza, España)."/>
 		<meta property="og:type" content="website"/>
-		<meta property="og:url" content="http://gliglifo.com/"/>
-		<meta property="og:image" content="http://gliglifo.com/img/facebook.gif"/>
+		<meta property="og:url" content="https://gliglifo.com/"/>
+		<meta property="og:image" content="https://gliglifo.com/img/facebook.gif"/>
 	  <link type="text/css" rel="stylesheet" href="./src/spectre.css">
 		<link type="text/css" rel="stylesheet" href="./src/gliglifo.css">
 	  <link type="text/plain" rel="author" href="./src/humans.txt"/>
@@ -23,7 +23,7 @@
 				<section class="navbar-section">
 						<a href="./index.html"><span class="navbar-brand mr-2" title="Glíglifo">
 							<svg version="1.1"
-								 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+								 xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" xmlns:a="https://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
 								 x="0px" y="0px" width="116px" height="35px" viewBox="0 0 332.9 101.3" style="enable-background:new 0 0 332.9 101.3;"
 								 xml:space="preserve">
 								<defs>
@@ -122,7 +122,7 @@
 		<section id="info-lugar"><a name="quienes-somos"></a>
 			<div class="container grid-sm">
 				<h2 class="contenido-h2 underline">Quiénes somos</h2>
-				<p><b>Damià Rotger</b> [<a href="https://www.facebook.com/EstudiDuctil/" title="Dúctil Facebook" target="_blank">Facebook</a> / <a href="https://twitter.com/Ductil_Grafic" title="Dúctil Twitter" target="_blank">Twitter</a> / <a href="https://www.instagram.com/ductil/" title="Dúctil Instagram" target="_blank">Instagram</a>] diseña <a href="http://ductilct.com/?tagportfolio=tipografia" title="Dúctil tipografías" target="_blank">tipografías</a> y escribe poesía. Es profesor de tipografía y diseño editorial, e imparte talleres y conferencias por todo el país. Es fundador de <a href="http://ductilct.com/" title="Dúctil" target="_blank">Dúctil</a> y la mitad de Glíglifo. Es autor de una docena de familias tipográficas —algunas publicadas en <a href="https://www.fontown.com/es/fundiciones-tipograficas/ductil" target="_blank" title="Dúctil Fontown">Fontown</a>— y ha publicado varios libros de poesía. Ha recibido prestigiosos premios y nominaciones en ambos campos.</p>
+				<p><b>Damià Rotger</b> [<a href="https://www.facebook.com/EstudiDuctil/" title="Dúctil Facebook" target="_blank">Facebook</a> / <a href="https://twitter.com/Ductil_Grafic" title="Dúctil Twitter" target="_blank">Twitter</a> / <a href="https://www.instagram.com/ductil/" title="Dúctil Instagram" target="_blank">Instagram</a>] diseña <a href="https://ductilct.com/?tagportfolio=tipografia" title="Dúctil tipografías" target="_blank">tipografías</a> y escribe poesía. Es profesor de tipografía y diseño editorial, e imparte talleres y conferencias por todo el país. Es fundador de <a href="https://ductilct.com/" title="Dúctil" target="_blank">Dúctil</a> y la mitad de Glíglifo. Es autor de una docena de familias tipográficas —algunas publicadas en <a href="https://www.fontown.com/es/fundiciones-tipograficas/ductil" target="_blank" title="Dúctil Fontown">Fontown</a>— y ha publicado varios libros de poesía. Ha recibido prestigiosos premios y nominaciones en ambos campos.</p>
 				<p><b>Pedro Arilla</b> [<a href="https://www.pedroarilla.com/" target="_blank" title="Pedro Arilla">Web</a> / <a href="https://www.twitter.com/pedroarilla" target="_blank" title="Pedro Arilla Twitter">Twitter</a> / <a href="https://www.instagram.com/pedroarilla" target="_blank" title="Pedro Arilla Instagram">Instagram</a>] diseña <a href="https://www.pedroarilla.com/fonts/" target="_blank" title="Pedro Arilla tipografías">tipografías</a> y escribe textos —y también código, pero sólo por diversión—. Es Senior Type Designer en <a href="https://www.fontsmith.com/" target="_blank" title="Fontsmith">Fontsmith</a>; editor de <a href="https://www.donserifa.com/" target="_blank" title="Don Serifa">Don Serifa</a>; obtuvo una Distinction en el prestigioso MA Typeface Design de la University of Reading; imparte talleres y conferencias por todo el mundo; escribe sobre tipografía en blogs y revistas; y es la otra mitad de Glíglifo.</p>
 			</div>
 			<div class="container grid-lg">
