--- a/gliglifo.html
+++ b/gliglifo.html
@@ -54,8 +54,7 @@
 						</span>
 			  </section>
 				<section class="navbar-section navbar-section-links">
-					<a href="./curso.html" title="Ir a Curso">Curso</a>
-			    <a href="./evento.html" title="Ir a Evento">Evento</a>
+					<a href="./index.html" title="Ir a Curso">Curso</a>
 					<span class="bold">Info</span>
 			  </section>
 			</div>
@@ -97,7 +96,7 @@
 				</div>
 			</div>
 			<div class="container grid-sm">
-				<p>Desde 2014 organizamos un curso intensivo de una semana (normalmente en el mes de julio) para aprender a diseñar una tipografía de principio a fin de la mano de Damià Rotger y Pedro Arilla; y desde 2019 (normalmente en el mes de mayo) ampliamos la oferta con un evento de tres días en el que invitamos a grandes diseñadores para intimar con el alumno y la letra en una serie de workshops y conferencias.</p>
+				<p>Desde 2014 organizamos un curso intensivo de una semana (normalmente en el mes de julio) para aprender a diseñar una tipografía de principio a fin de la mano de Damià Rotger y Pedro Arilla.</p>
 			</div>
 		</section>
 		<section class="contacto"><a name="contacto"></a>
@@ -122,8 +121,8 @@
 		<section id="info-lugar"><a name="quienes-somos"></a>
 			<div class="container grid-sm">
 				<h2 class="contenido-h2 underline">Quiénes somos</h2>
-				<p><b>Damià Rotger</b> [<a href="https://www.facebook.com/EstudiDuctil/" title="Dúctil Facebook" target="_blank">Facebook</a> / <a href="https://twitter.com/Ductil_Grafic" title="Dúctil Twitter" target="_blank">Twitter</a> / <a href="https://www.instagram.com/ductil/" title="Dúctil Instagram" target="_blank">Instagram</a>] diseña <a href="https://ductilct.com/?tagportfolio=tipografia" title="Dúctil tipografías" target="_blank">tipografías</a> y escribe poesía. Es profesor de tipografía y diseño editorial, e imparte talleres y conferencias por todo el país. Es fundador de <a href="https://ductilct.com/" title="Dúctil" target="_blank">Dúctil</a> y la mitad de Glíglifo. Es autor de una docena de familias tipográficas —algunas publicadas en <a href="https://www.fontown.com/es/fundiciones-tipograficas/ductil" target="_blank" title="Dúctil Fontown">Fontown</a>— y ha publicado varios libros de poesía. Ha recibido prestigiosos premios y nominaciones en ambos campos.</p>
-				<p><b>Pedro Arilla</b> [<a href="https://www.pedroarilla.com/" target="_blank" title="Pedro Arilla">Web</a> / <a href="https://www.twitter.com/pedroarilla" target="_blank" title="Pedro Arilla Twitter">Twitter</a> / <a href="https://www.instagram.com/pedroarilla" target="_blank" title="Pedro Arilla Instagram">Instagram</a>] diseña <a href="https://www.pedroarilla.com/fonts/" target="_blank" title="Pedro Arilla tipografías">tipografías</a> y escribe textos —y también código, pero sólo por diversión—. Es Senior Type Designer en <a href="https://www.fontsmith.com/" target="_blank" title="Fontsmith">Fontsmith</a>; editor de <a href="https://www.donserifa.com/" target="_blank" title="Don Serifa">Don Serifa</a>; obtuvo una Distinction en el prestigioso MA Typeface Design de la University of Reading; imparte talleres y conferencias por todo el mundo; escribe sobre tipografía en blogs y revistas; y es la otra mitad de Glíglifo.</p>
+				<p><b>Damià Rotger</b> [<a href="https://www.facebook.com/EstudiDuctil/" title="Dúctil Facebook" target="_blank">Facebook</a> / <a href="https://twitter.com/Ductil_Grafic" title="Dúctil Twitter" target="_blank">Twitter</a> / <a href="https://www.instagram.com/ductil/" title="Dúctil Instagram" target="_blank">Instagram</a>] diseña <a href="https://ductilct.com/?tagportfolio=tipografia" title="Dúctil tipografías" target="_blank">tipografías</a> y escribe poesía. Es profesor de tipografía y diseño editorial, e imparte talleres y conferencias por todo el país. Es fundador de <a href="https://ductilct.com/" title="Dúctil" target="_blank">Dúctil</a> y la mitad de Glíglifo. Es autor de una docena de familias tipográficas y ha publicado varios libros de poesía. Ha recibido prestigiosos premios y nominaciones en ambos campos.</p>
+				<p><b>Pedro Arilla</b> [<a href="https://www.pedroarilla.com/" target="_blank" title="Pedro Arilla">Web</a> / <a href="https://www.twitter.com/pedroarilla" target="_blank" title="Pedro Arilla Twitter">Twitter</a> / <a href="https://www.instagram.com/pedroarilla" target="_blank" title="Pedro Arilla Instagram">Instagram</a>] es Creative Type Director en <a href="https://www.monotype.com/" target="_blank" title="Monotype">Monotype</a>; diseñador de <a href="https://www.pedroarilla.com/fonts/" target="_blank" title="Pedro Arilla tipografías">tipografías</a>; editor de <a href="https://www.donserifa.com/" target="_blank" title="Don Serifa">Don Serifa</a>; graduado con Distinction en el prestigioso MA Typeface Design de la University of Reading; imparte talleres y conferencias por todo el mundo; escribe sobre tipografía en blogs y revistas; y es la otra mitad de Glíglifo.</p>
 			</div>
 			<div class="container grid-lg">
 			  <div class="columns">
