--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<div class="container grid-sm">
 				<h1>Curso esterfuroso de tipografía</h1>
 				<h2 class="contenido-h2">Aprende el proceso completo de diseñar una tipografía en un palacio del siglo XVI durante una semana intensiva con Damià Rotger y Pedro Arilla.</h2>
-				<h3 class="contenido-h3">Sexta edición: 20 al 26 de julio de 2020</h3>
+				<h3 class="contenido-h3">Séptima edición: aplazada por el COVID-19</h3>
 			</div>
 		</section>
 		<section class="que-es"><a name="que-es"></a>
@@ -99,7 +99,7 @@
 			<div class="container grid-sm">
 				<p><b>Profesores:</b> Damià Rotger y Pedro Arilla. [<a href="#profesores" title="Profesores">+</a>]</p>
 				<p><b>Lugar:</b> Sos del Rey Católico (Zaragoza, España). [<a href="#lugar" title="Lugar">+</a>]</p>
-				<p><b>Fecha:</b> 6.ª edición, 20 al 26 de julio de 2020.</p>
+				<p><b>Fecha:</b> (aplazada por el COVID-19)</p>
 				<p><b>Plazas:</b> Inscripción limitada a 25 personas.</p>
 				<a class="btn btn-primary btn-lg" style="width:100%;" href="#inscripcion">Ver precio e inscripción</a>
 			</div>
@@ -329,7 +329,7 @@
           </div>
 				</div>
 				<div class="toast plus20">
-					<b>Inscripción:</b> cerrada para la edición 2020.<br>
+					<b>Inscripción:</b> aplazada por el COVID-19.<br>
 					<b>Plazas:</b> quedan 0 (de 25).
 				</div>
 				<div class="toast toast-warning plus20" style="color:black; background-color:white; border-color:#dadee4;">
