--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 			  </section>
 				<section class="navbar-section navbar-section-links">
 				    <span class="bold">Curso</span>
-						<a href="./gliglifo.html" title="Ir a Más información">Info</a>
+						<a href="./mini" title="Ir a Mini Glíglifo">Mini</a>
+						<a href="./info" title="Ir a Más información">Info</a>
 			  </section>
 			</div>
 			<div id="submenu">
@@ -69,15 +70,15 @@
 		</header>
 		<section class="intro" id="curso-intro">
 			<div class="container grid-sm">
-				<h1>Curso esterfuroso de tipografía</h1>
+				<h1>Curso intensivo y pasional de tipografía</h1>
 				<h2 class="contenido-h2">Aprende el proceso completo de diseñar una tipografía en un palacio del siglo XVI durante una semana intensiva con Damià Rotger y Pedro Arilla.</h2>
-				<h3 class="contenido-h3">Séptima edición: aplazada por el COVID-19</h3>
+				<h3 class="contenido-h3">Próxima edición: julio 2023</h3>
 			</div>
 		</section>
 		<section class="que-es"><a name="que-es"></a>
 			<div class="container grid-sm">
 				<h2 class="contenido-h2 underline">¿Qué es Glíglifo?</h2>
-				<p><b>Concepto Glíglifo:</b> Para el capítulo 68 de su novela <i>Rayuela</i>, Julio Cortázar creó un lenguaje al que solo los amantes pueden acceder. Lo llamó «glíglico». Aplicando ese concepto a la letra (glifo) en un entorno único como es la villa medieval de Sos del Rey Católico, Damià Rotger y Pedro Arilla han construído un mundo de experiencias tipográficas. [<a href="./gliglifo.html" title="Más información">+</a>]</p>
+				<p><b>Concepto Glíglifo:</b> Para el capítulo 68 de su novela <i>Rayuela</i>, Julio Cortázar creó un lenguaje al que solo los amantes pueden acceder. Lo llamó «glíglico». Aplicando ese concepto a la letra (glifo) en un entorno único como es la villa medieval de Sos del Rey Católico, Damià Rotger y Pedro Arilla han construído un mundo de experiencias tipográficas. [<a href="./info" title="Más información">+</a>]</p>
 			</div>
 			<div class="container grid-lg">
 			  <div class="columns">
@@ -87,7 +88,7 @@
 			  </div>
 			</div>
 			<div class="container grid-sm">
-				<p><b>Concepto curso:</b> Glíglifo propone un curso intensivo y pasional, un retiro espiritual, una experiencia en la que los amantes de la letra aprenderemos a crear, sentir y diseñar un alfabeto. Cada año tan solo 25 personas son las elegidas para trabajar intensivamente durante una semana en un proyecto integral de diseño de una tipografía y producción de la fuente. [<a href="#programa" title="Más información">+</a>]</p>
+				<p><b>Concepto curso:</b> Glíglifo propone un curso intensivo y pasional, un retiro espiritual, una experiencia en la que los amantes de la letra aprenderemos a crear, sentir y diseñar un alfabeto. Cada edición, 25 personas vienen con nosotros a trabajar intensamente durante una semana en un proyecto integral de diseño de una tipografía y producción de la fuente. [<a href="#programa" title="Más información">+</a>]</p>
 			</div>
 			<div class="container grid-lg">
 				<div class="columns">
@@ -99,7 +100,7 @@
 			<div class="container grid-sm">
 				<p><b>Profesores:</b> Damià Rotger y Pedro Arilla. [<a href="#profesores" title="Profesores">+</a>]</p>
 				<p><b>Lugar:</b> Sos del Rey Católico (Zaragoza, España). [<a href="#lugar" title="Lugar">+</a>]</p>
-				<p><b>Fecha:</b> (aplazada por el COVID-19)</p>
+				<p><b>Fecha:</b> Próxima edición en julio 2023</p>
 				<p><b>Plazas:</b> Inscripción limitada a 25 personas.</p>
 				<a class="btn btn-primary btn-lg" style="width:100%;" href="#inscripcion">Ver precio e inscripción</a>
 			</div>
@@ -163,8 +164,8 @@
 				  </div>
 				  <div class="column col-9 col-xs-12" class="pros-bio">
 				    <h3 class="contenido-h3 bold">Pedro Arilla</h3>
-						<p>Pedro es Creative Type Director en <a href="https://www.monotype.com/" target="_blank" title="Monotype">Monotype</a>; diseñador de <a href="https://www.pedroarilla.com/fonts/" target="_blank" title="Pedro Arilla tipografías">tipografías</a>; editor de <a href="https://www.donserifa.com/" target="_blank" title="Don Serifa">Don Serifa</a>; graduado con Distinction en el prestigioso MA Typeface Design de la University of Reading; imparte talleres y conferencias por todo el mundo; escribe sobre tipografía en blogs y revistas; y es la otra mitad de Glíglifo.</p>
-						<p><a href="https://www.pedroarilla.com/" target="_blank" title="Pedro Arilla">Web</a>&ensp;/&ensp;<a href="https://www.twitter.com/pedroarilla" target="_blank" title="Pedro Arilla Twitter">Twitter</a>&ensp;/&ensp;<a href="https://www.instagram.com/pedroarilla" target="_blank" title="Pedro Arilla Instagram">Instagram</a></p>
+						<p>Pedro se graduó con Distinción en el prestigioso Typeface Design Masters de Reading (UK), trabajado como Creative Director en las legendarias Fontsmith (UK) y Monotype (USA), realizado proyectos para Google, Amazon, MotoGP o FC Barcelona, y diseñado tipografías en árabe, cirílico, griego o japonés. Ahora dirige su propio <a href="https://arillatye.studio/" title="Arillatype.Studio®" target="_blank">estudio tipográfico</a>.</p>
+						<p><a href="https://www.pedroarilla.com/" target="_blank" title="Pedro Arilla">Web</a>&ensp;/&ensp;<a href="https://www.twitter.com/arillatype" target="_blank" title="Arillatype Twitter">Twitter</a>&ensp;/&ensp;<a href="https://www.instagram.com/arillatype" target="_blank" title="Arillatype Instagram">Instagram</a></p>
 				  </div>
 				</div>
 			</div>
@@ -329,7 +330,7 @@
           </div>
 				</div>
 				<div class="toast plus20">
-					<b>Inscripción:</b> aplazada por el COVID-19.<br>
+					<b>Inscripción:</b> cerrada, próxima edición julio 2023.<br>
 					<b>Plazas:</b> quedan 0 (de 25).
 				</div>
 				<div class="toast toast-warning plus20" style="color:black; background-color:white; border-color:#dadee4;">
@@ -362,12 +363,12 @@
 				<h2 class="contenido-h2 underline">Patrocinadores</h2>
 				<div class="columns" style="text-align:center;">
 					<div class="column col-4 col-sm-6"><a href="https://campgrafic.com" title="Campgràfic" target="_blank"><img src="img/campgrafic.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="https://glyphsapp.com" title="Glyphs" target="_blank"><img src="img/glyphs.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="https://graffica.info" title="Gràffica" target="_blank"><img src="img/graffica.png" alt="" width="175px"></a></div>
 					<div class="column col-4 col-sm-6"><a href="https://tipo-e.com" title="Tipo e" target="_blank"><img src="img/tipoe.png" alt="" width="175px"></a></div>
 					<div class="column col-4 col-sm-6"><a href="https://www.edicionesjardindemonos.es/" title="Jardín de monos" target="_blank"><img src="img/jardindemonos.png" alt="" width="175px"></a></div>
+					<div class="column col-4 col-sm-6"><a href="https://arillatype.studio/" title="Arillatype" target="_blank"><img src="img/arillatype.png" alt="" width="175px"></a></div>
+					<div class="column col-4 col-sm-6"><a href="https://glyphsapp.com" title="Glyphs" target="_blank"><img src="img/glyphs.png" alt="" width="175px"></a></div>
 					<div class="column col-4 col-sm-6"><a href="https://ductilct.com/" title="Dúctil" target="_blank"><img src="img/ductil.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="https://donserifa.com" title="Don Serifa" target="_blank"><img src="img/donserifa.png" alt="" width="175px"></a></div>
+					<div class="column col-4 col-sm-6"><a href="https://graffica.info" title="Gràffica" target="_blank"><img src="img/graffica.png" alt="" width="175px"></a></div>
 					<div class="column col-4 col-sm-6"><a href="https://www.sosdelreycatolico.com/" title="Ayuntamiento de Sos" target="_blank"><img src="img/sos.png" alt="Ayuntamiento de Sos del Rey Católico" width="175px"></a></div>
 					<div class="column col-4 col-sm-6"><a href="https://www.alberguedesos.com/" title="Albergue de Sos" target="_blank"><img src="img/albergue.png" alt="Albergue de Jueventud de Sos del Rey Católico" width="175px"></a></div>
 				</div>
