--- a/info/index.html
+++ b/info/index.html
@@ -12,16 +12,16 @@
 		<meta property="og:type" content="website"/>
 		<meta property="og:url" content="https://gliglifo.com/"/>
 		<meta property="og:image" content="https://gliglifo.com/img/facebook.gif"/>
-	  <link type="text/css" rel="stylesheet" href="./src/spectre.css">
-		<link type="text/css" rel="stylesheet" href="./src/gliglifo.css">
-	  <link type="text/plain" rel="author" href="./src/humans.txt"/>
-		<link rel="shortcut icon" type="image/png" href="./img/favicon.ico"/>
+	  <link type="text/css" rel="stylesheet" href="../src/spectre.css">
+		<link type="text/css" rel="stylesheet" href="../src/gliglifo.css">
+	  <link type="text/plain" rel="author" href="../src/humans.txt"/>
+		<link rel="shortcut icon" type="image/png" href="../img/favicon.ico"/>
 	</head>
 	<body>
 		<header id="sticky-header">
 			<div class="navbar container grid-sm" id="menu">
 				<section class="navbar-section">
-						<a href="./index.html"><span class="navbar-brand mr-2" title="Glíglifo">
+						<a href="../index.html"><span class="navbar-brand mr-2" title="Glíglifo">
 							<svg version="1.1"
 								 xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" xmlns:a="https://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
 								 x="0px" y="0px" width="116px" height="35px" viewBox="0 0 332.9 101.3" style="enable-background:new 0 0 332.9 101.3;"
@@ -54,7 +54,8 @@
 						</span>
 			  </section>
 				<section class="navbar-section navbar-section-links">
-					<a href="./index.html" title="Ir a Curso">Curso</a>
+					<a href="../" title="Ir a Curso">Curso</a>
+					<a href="../mini" title="Ir a Mini Glíglifo">Mini</a>
 					<span class="bold">Info</span>
 			  </section>
 			</div>
@@ -80,9 +81,9 @@
 			</div>
 			<div class="container grid-lg">
 			  <div class="columns">
-			    <div class="column col-4 col-sm-12 plus20"><img src="./img/sos1.jpg" class="img-responsive"></div>
-			    <div class="column col-4 col-sm-12 plus20"><img src="./img/sos2.jpg" class="img-responsive"></div>
-			    <div class="column col-4 col-sm-12 plus20"><img src="./img/sos3.jpg" class="img-responsive"></div>
+			    <div class="column col-4 col-sm-12 plus20"><img src="../img/sos1.jpg" class="img-responsive"></div>
+			    <div class="column col-4 col-sm-12 plus20"><img src="../img/sos2.jpg" class="img-responsive"></div>
+			    <div class="column col-4 col-sm-12 plus20"><img src="../img/sos3.jpg" class="img-responsive"></div>
 			  </div>
 			</div>
 			<div class="container grid-sm">
@@ -90,13 +91,13 @@
 			</div>
 			<div class="container grid-lg">
 				<div class="columns">
-					<div class="column col-4 col-sm-12 plus20"><img src="./img/curso1.jpg" class="img-responsive"></div>
-					<div class="column col-4 col-sm-12 plus20"><img src="./img/curso2.jpg" class="img-responsive"></div>
-					<div class="column col-4 col-sm-12 plus20"><img src="./img/curso3.jpg" class="img-responsive"></div>
+					<div class="column col-4 col-sm-12 plus20"><img src="../img/curso1.jpg" class="img-responsive"></div>
+					<div class="column col-4 col-sm-12 plus20"><img src="../img/curso2.jpg" class="img-responsive"></div>
+					<div class="column col-4 col-sm-12 plus20"><img src="../img/curso3.jpg" class="img-responsive"></div>
 				</div>
 			</div>
 			<div class="container grid-sm">
-				<p>Desde 2014 organizamos un curso intensivo de una semana (normalmente en el mes de julio) para aprender a diseñar una tipografía de principio a fin de la mano de Damià Rotger y Pedro Arilla.</p>
+				<p>Desde 2014 organizamos un curso intensivo de una semana (normalmente en el mes de julio) y pequeños eventos para aprender a diseñar una tipografía de principio a fin de la mano de Damià Rotger y Pedro Arilla.</p>
 			</div>
 		</section>
 		<section class="contacto"><a name="contacto"></a>
@@ -122,13 +123,13 @@
 			<div class="container grid-sm">
 				<h2 class="contenido-h2 underline">Quiénes somos</h2>
 				<p><b>Damià Rotger</b> [<a href="https://www.facebook.com/EstudiDuctil/" title="Dúctil Facebook" target="_blank">Facebook</a> / <a href="https://twitter.com/Ductil_Grafic" title="Dúctil Twitter" target="_blank">Twitter</a> / <a href="https://www.instagram.com/ductil/" title="Dúctil Instagram" target="_blank">Instagram</a>] diseña <a href="https://ductilct.com/?tagportfolio=tipografia" title="Dúctil tipografías" target="_blank">tipografías</a> y escribe poesía. Es profesor de tipografía y diseño editorial, e imparte talleres y conferencias por todo el país. Es fundador de <a href="https://ductilct.com/" title="Dúctil" target="_blank">Dúctil</a> y la mitad de Glíglifo. Es autor de una docena de familias tipográficas y ha publicado varios libros de poesía. Ha recibido prestigiosos premios y nominaciones en ambos campos.</p>
-				<p><b>Pedro Arilla</b> [<a href="https://www.pedroarilla.com/" target="_blank" title="Pedro Arilla">Web</a> / <a href="https://www.twitter.com/pedroarilla" target="_blank" title="Pedro Arilla Twitter">Twitter</a> / <a href="https://www.instagram.com/pedroarilla" target="_blank" title="Pedro Arilla Instagram">Instagram</a>] es Creative Type Director en <a href="https://www.monotype.com/" target="_blank" title="Monotype">Monotype</a>; diseñador de <a href="https://www.pedroarilla.com/fonts/" target="_blank" title="Pedro Arilla tipografías">tipografías</a>; editor de <a href="https://www.donserifa.com/" target="_blank" title="Don Serifa">Don Serifa</a>; graduado con Distinction en el prestigioso MA Typeface Design de la University of Reading; imparte talleres y conferencias por todo el mundo; escribe sobre tipografía en blogs y revistas; y es la otra mitad de Glíglifo.</p>
+				<p><b>Pedro Arilla</b> [<a href="https://www.pedroarilla.com/" target="_blank" title="Pedro Arilla">Web</a> / <a href="https://www.twitter.com/arillatype" target="_blank" title="Arillatype Twitter">Twitter</a> / <a href="https://www.instagram.com/arillatype" target="_blank" title="Arillatype Instagram">Instagram</a>] se graduó con Distinción en el prestigioso Typeface Design Masters de Reading (UK), trabajado como Creative Director en las legendarias Fontsmith (UK) y Monotype (USA), realizado proyectos para Google, Amazon, MotoGP o FC Barcelona, y diseñado tipografías en árabe, cirílico, griego o japonés. Ahora dirige su propio <a href="https://arillatye.studio/" title="Arillatype.Studio®" target="_blank">estudio tipográfico</a>.</p>
 			</div>
 			<div class="container grid-lg">
 			  <div class="columns">
-			    <div class="column col-4 col-sm-12 plus20"><img src="./img/damia-pedro1.jpg" class="img-responsive"></div>
-			    <div class="column col-4 col-sm-12 plus20"><img src="./img/damia-pedro2.jpg" class="img-responsive"></div>
-			    <div class="column col-4 col-sm-12 plus20"><img src="./img/damia-pedro3.jpg" class="img-responsive"></div>
+			    <div class="column col-4 col-sm-12 plus20"><img src="../img/damia-pedro1.jpg" class="img-responsive"></div>
+			    <div class="column col-4 col-sm-12 plus20"><img src="../img/damia-pedro2.jpg" class="img-responsive"></div>
+			    <div class="column col-4 col-sm-12 plus20"><img src="../img/damia-pedro3.jpg" class="img-responsive"></div>
 			  </div>
 			</div>
 			<div class="container grid-sm"><a name="sos"></a>
@@ -140,6 +141,6 @@
 			<p>&#13025; 2014–<script>document.write(new Date().getFullYear())</script>, Damià Rotger y Pedro Arilla.</p>
 		</footer>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="./src/curso-inscripcion.js"></script>
+		<script src="../src/curso-inscripcion.js"></script>
 	</body>
 </html>
