--- a/mini/index.html
+++ b/mini/index.html
@@ -79,11 +79,12 @@
 			<div class="container grid-sm">
 				<h2 class="contenido-h2 underline">Información</h2>
 			<div class="container grid-sm plus40">
-				<p><b>Lugar:</b> Dúctil (Nicolau de Pacs 16, Palma de Mallorca)</p>
+				<p><b>Duración:</b> 10 horas.</p>
 				<p><b>Fecha:</b> 27 al 29 de octubre de 2023.<br>
 				— Jueves: 17 a 20h;<br>
 				— Viernes: 17 a 20h;<br>
 				— Sábado: 9 a 13.30h.</p>
+				<p><b>Lugar:</b> Dúctil (Nicolau de Pacs 16, Palma de Mallorca)</p>
 				<p><b>Plazas:</b> Inscripción limitada a 15 personas.</p>
 				<a class="btn btn-primary btn-lg" style="width:100%;" href="#inscripcion">Ver precio e inscripción</a>
 			</div>
