--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 				  </div>
 				  <div class="column col-9 col-xs-12" class="pros-bio">
 				    <h3 class="contenido-h3 bold">Pedro Arilla</h3>
-						<p>Pedro se graduó con Distinción en el prestigioso Typeface Design Masters de Reading (UK), trabajado como Creative Director en las legendarias Fontsmith (UK) y Monotype (USA), realizado proyectos para Google, Amazon, MotoGP o FC Barcelona, y diseñado tipografías en árabe, cirílico, griego o japonés. Ahora dirige su propio <a href="https://arillatye.studio/" title="Arillatype.Studio®" target="_blank">estudio tipográfico</a>.</p>
+						<p>Pedro se graduó con Distinción en el prestigioso Typeface Design Masters de Reading (UK), ha trabajado como Creative Director en las legendarias Fontsmith (UK) y Monotype (USA), realizado proyectos para Google, Amazon, MotoGP o FC Barcelona, y diseñado tipografías en árabe, cirílico, griego o japonés. Ahora co-dirige su <a href="https://arillatye.studio/" title="Arillatype.Studio®" target="_blank">estudio tipográfico</a>.</p>
 						<p><a href="https://www.pedroarilla.com/" target="_blank" title="Pedro Arilla">Web</a>&ensp;/&ensp;<a href="https://www.twitter.com/arillatype" target="_blank" title="Arillatype Twitter">Twitter</a>&ensp;/&ensp;<a href="https://www.instagram.com/arillatype" target="_blank" title="Arillatype Instagram">Instagram</a></p>
 				  </div>
 				</div>
