--- a/mini/index.html
+++ b/mini/index.html
@@ -72,7 +72,7 @@
 			<div class="container grid-sm">
 				<h1>Taller intensivo de introducción a la tipografía</h1>
 				<h2 class="contenido-h2">Taller intensivo de tres días para aprender los conceptos fundamentales del diseño de tipografías con Damià Rotger y Pedro Arilla.</h2>
-				<h3 class="contenido-h3">Próxima edición: Palma de Mallorca, 27–29 octubre 2022</h3>
+				<h3 class="contenido-h3">Última edición realizada: Palma de Mallorca, 27–29 octubre 2022</h3>
 			</div>
 		</section>
 		<section class="que-es"><a name="informacion"></a>
@@ -165,14 +165,14 @@
 								<b>La pre-inscripción no es vinculante ni significa la inscripción directa.</b> Cuando recibamos tu solicitud te indicaremos cómo formalizar el pago y completar la inscripción.
 							</div>
 							<div class="panel-footer">
-								<a class="btn btn-primary btn-lg" style="width:100%;" href="mailto:hola@gliglifo.com?subject=Pre-inscripción Glíglifo Mini&body=Hola, quiero inscribirme. Gracias. :)">PRE-INSCRIBIRSE</a>
+								<a class="btn btn-primary btn-lg disabled" style="width:100%;" href="mailto:hola@gliglifo.com?subject=Pre-inscripción Glíglifo Mini&body=Hola, quiero inscribirme. Gracias. :)">PRE-INSCRIBIRSE</a>
 							</div>
             </div>
           </div>
 				</div>
 				<div class="toast toast-warning plus20" style="color:black; background-color:white; border-color:#dadee4;">
-					<b>Inscripción:</b> abierta para Palma de Mallorca, 27–29 octubre 2022.<br>
-					<b>Plazas:</b> quedan 3 (de 15).
+					<b>Inscripción:</b> cerrada para Palma de Mallorca, 27–29 octubre 2022.<br>
+					<b>Plazas:</b> quedan 0 (de 15).
 				</div>
 			</div>
 		</section>
