--- a/mini/index.html
+++ b/mini/index.html
@@ -104,10 +104,10 @@
 					<img class="img-responsive s-rounded" src="../img/pedro.jpg">
 				</div>
 				<div class="column col-9 col-xs-12" class="pros-bio">
-					<h3 class="contenido-h3 bold">Pedro Arilla</h3>
-					<p>Pedro se graduó con Distinción en el prestigioso Typeface Design Masters de Reading (UK), ha trabajado como Creative Director en las legendarias Fontsmith (UK) y Monotype (USA), realizado proyectos para Google, Amazon, MotoGP o FC Barcelona, y diseñado tipografías en árabe, cirílico, griego o japonés. Ahora co-dirige su <a href="https://arillatye.studio/" title="Arillatype.Studio®" target="_blank">estudio tipográfico</a>.</p>
-					<p><a href="https://www.pedroarilla.com/" target="_blank" title="Pedro Arilla">Web</a>&ensp;/&ensp;<a href="https://www.twitter.com/arillatype" target="_blank" title="Arillatype Twitter">Twitter</a>&ensp;/&ensp;<a href="https://www.instagram.com/arillatype" target="_blank" title="Arillatype Instagram">Instagram</a></p>
-				</div>
+				    <h3 class="contenido-h3 bold">Pedro Arilla</h3>
+						<p>Pedro se graduó con Distinción en el prestigioso Typeface Design Masters de Reading (UK), ha trabajado como Creative Director en las legendarias Fontsmith (UK) y Monotype (USA), realizado proyectos para Google, Amazon, MotoGP o FC Barcelona, y diseñado tipografías en árabe, cirílico, griego o japonés. Ahora co-dirige <a href="https://arillatype.studio/" title="Arillatype.Studio®" target="_blank">Arillatype.Studio</a>.</p>
+						<p><a href="https://arillatype.studio/" target="_blank" title="Pedro Arilla">Web</a>&ensp;/&ensp;<a href="https://www.twitter.com/arillatype" target="_blank" title="Arillatype Twitter">Twitter</a>&ensp;/&ensp;<a href="https://www.instagram.com/arillatype" target="_blank" title="Arillatype Instagram">Instagram</a></p>
+				  </div>
 			</div>
 		</section>
 		<section class="programa" id="mini-programa"><a name="programa"></a>
