--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<div class="container grid-sm">
 				<h1>Curso intensivo y pasional de tipografía</h1>
 				<h2 class="contenido-h2">Aprende el proceso completo de diseñar una tipografía en un palacio del siglo XVI durante una semana intensiva con Damià Rotger y Pedro Arilla.</h2>
-				<h3 class="contenido-h3">Próxima edición: julio 2023</h3>
+				<h3 class="contenido-h3">Próxima edición: 17–23 julio 2023</h3>
 			</div>
 		</section>
 		<section class="que-es"><a name="que-es"></a>
@@ -100,7 +100,7 @@
 			<div class="container grid-sm">
 				<p><b>Profesores:</b> Damià Rotger y Pedro Arilla. [<a href="#profesores" title="Profesores">+</a>]</p>
 				<p><b>Lugar:</b> Sos del Rey Católico (Zaragoza, España). [<a href="#lugar" title="Lugar">+</a>]</p>
-				<p><b>Fecha:</b> Próxima edición en julio 2023</p>
+				<p><b>Fecha:</b> Próxima edición 17-23 julio 2023</p>
 				<p><b>Plazas:</b> Inscripción limitada a 25 personas.</p>
 				<a class="btn btn-primary btn-lg" style="width:100%;" href="#inscripcion">Ver precio e inscripción</a>
 			</div>
@@ -193,7 +193,7 @@
 			  </div>
 			</div>
 			<div class="container grid-sm">
-				<p><b>El alojamiento será en el Albergue Municipal</b> de Sos del Rey Católico, del que dispondremos enteramente para nosotros con sus salas de trabajo (mesas y sillas, WIFI, proyector, etc.), su cafetería/restaurante (donde desayunaremos, comeremos y cenaremos), sus habitaciones (habitación de literas) y el resto de sus instalaciones (duchas, terrazas, etcétera).</p>
+				<p><b>El alojamiento será en el Albergue Municipal</b> de Sos del Rey Católico, del que dispondremos con sus salas de trabajo (mesas y sillas, WIFI, proyector, etc.), su cafetería/restaurante (donde desayunaremos, comeremos y cenaremos), sus habitaciones (habitación de literas) y el resto de sus instalaciones (duchas, terrazas, etcétera).</p>
 			</div>
 		</section>
 		<section class="inscripcion"><a name="inscripcion"></a>
@@ -330,7 +330,7 @@
           </div>
 				</div>
 				<div class="toast plus20">
-					<b>Inscripción:</b> cerrada, próxima edición julio 2023.<br>
+					<b>Inscripción:</b> abierta próximamente.<br>
 					<b>Plazas:</b> quedan 25 (de 25).
 				</div>
 				<div class="toast toast-warning plus20" style="color:black; background-color:white; border-color:#dadee4;">
